--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -26,7 +26,7 @@
   <body ng-app="starter" ng-controller="MapCtrl">
     <ion-pane>
       <ion-header-bar class="bar-dark" >
-        <h1 class="title">Map</h1>
+        <h1 class="title">Map - {{distance}}m traveled</h1>
       </ion-header-bar>
 
       <ion-content>
